# img-resize-kit

./: README.md  pyproject.toml
img_resize/: __init__.py  resizer.py
img_resize_kit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
